--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 				</p> 
 				<p> &nbsp The thing I enjoy most about programming and mathematics is solving problems with a limited set of rules. 
 				There is no greater feeling than solving a difficult problem. A lot of people do not realize how much of 
-				an art mathematics and programming is. Writing out a mathematical proof or coding some sort of solution to solve a problem is kinda magical. 
+				an art mathematics and programming is. Writing out a mathematical proof or coding some sort of solution to solve a problem is kind of magical. 
 				If you want to be great at something it requires hard work and not just talent. Like Lebron James says,  
 				“Hard work beats talent when talent doesn't work hard.” 
 				</p>
