Added the constructor page, fixed the javascript file, and added another journal post.

--- a/inheritance.html
+++ b/inheritance.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>THE AVERAGE PROGRAMMER (Inheritance)</title>
+	<meta charset="UTF-8">
 	<meta name="description" content="A programming blog by Y0551">
 	<meta name="keywords" content="programming, blog, java, journal, average, programmer, notes, Inheritance">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
