--- a/notes.html
+++ b/notes.html
@@ -3,6 +3,7 @@
 <head>
 
 <title>THE AVERAGE PROGRAMMER (NOTES)</title>
+	<meta charset="UTF-8">
 	<meta name="description" content="A programming blog by Y0551">
 	<meta name="keywords" content="programming, blog, java, journal, average, programmer, notes">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -28,11 +29,11 @@
 			<div class="postFlex">
 			<p> <u> My Java Notes (COMP 249): </u> </p>
 			<p> <a href="inheritance.html"> &nbsp Inheritance </a> ............................................................................................ 1 </p>
-			<p> <a href="overloadingvsoverriding.html"> &nbsp &nbsp Overloading Methods vs Overriding Methods </a> ............................................................ 2 </p>
-			<!--
-			<p> <a href="#"> &nbsp &nbsp The Super Constructor </a> ................................................................................ 3 </p>
+			<p> <a href="overloadingvsoverriding.html"> &nbsp Overloading Methods vs Overriding Methods </a> .............................................................. 2 </p>
+			<p> <a href="#"> &nbsp The Super Constructor </a> .................................................................................. 3 </p>
 			<p> <a href="#"> &nbsp Private, Protected, Package </a> ............................................................................ 4 </p>
 			<p> <a href="#"> &nbsp The Object Class </a> ....................................................................................... 5 </p>
+			<!--
 			<p> <a href="#"> &nbsp Polymorphism </a> ............................................................................................6 </p>
 			<p> <a href="#"> &nbsp Abstract Classes </a> ....................................................................................... 7 </p>
 			<p> <a href="#"> &nbsp Inner Classes </a> .......................................................................................... 8 </p>
