--- a/overloadingvsoverriding.html
+++ b/overloadingvsoverriding.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>THE AVERAGE PROGRAMMER (Overloading Vs Overriding)</title>
+	<meta charset="UTF-8">
 	<meta name="description" content="A programming blog by Y0551">
 	<meta name="keywords" content="programming, blog, java, journal, average, programmer, notes, Overloading Vs Overriding">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -69,7 +70,6 @@
 			but not from less restrictive to more restrictive. More on this later. 
 			</p>
 
-			<br>
 			<p class=post-container> <strong> Private ➡ Protected  ➡ Public </strong> <br> 
 			(You can <strong> not </strong> go the other way) <br>
 			<strong> Public x Protected x Private </strong> 
