--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>THE AVERAGE PROGRAMMER (CONTACT)</title>
+	<meta charset="UTF-8">
 	<meta name="description" content="A programming blog by Y0551">
 	<meta name="keywords" content="programming, blog, java">
 	<link rel="stylesheet" href="default-style.css">
