--- a/notes.html
+++ b/notes.html
@@ -30,7 +30,7 @@
 			<p> <u> My Java Notes (COMP 249): </u> </p>
 			<p> <a href="inheritance.html"> &nbsp Inheritance </a> ............................................................................................ 1 </p>
 			<p> <a href="overloadingvsoverriding.html"> &nbsp Overloading Methods vs Overriding Methods </a> .............................................................. 2 </p>
-			<p> <a href="#"> &nbsp The Super Constructor </a> .................................................................................. 3 </p>
+			<p> <a href="constructors.html"> &nbsp The Super Constructor </a> .................................................................................. 3 </p>
 			<p> <a href="#"> &nbsp Private, Protected, Package </a> ............................................................................ 4 </p>
 			<p> <a href="#"> &nbsp The Object Class </a> ....................................................................................... 5 </p>
 			<!--
