Made some updates to the about and index page. I also made some changes to javaScript.

--- a/index.html
+++ b/index.html
@@ -31,15 +31,18 @@
 					<small> Expressing Yourself In Words Is Not Easy </small> 
 					<p> &nbsp Whenever I write something down it never sounds like how I intended it to sound? No matter how much I try it's always the same story. I have an idea that I want to convey, so I write it down, but when I read it back to myself it just doesn't sound right. There is something missing. I cannot tell you the amount of time I spent reading and rereading things I wrote trying to get them to be perfect. To tell you the truth I don’t think it's possible, but at some point you just have to hope that the points you are trying to make are clear, and that someone who is reading them understands them and appreciates them. I think William Knowlton Zinsser said it best “Writing is hard work. A clear sentence is no accident. Very few sentences come out right the first time, or even the third time. Remember this in moments of despair. If you find that writing is hard, it’s because it is hard.” 
 					</p> 
-					<p> &nbsp A great way to test if you understand something is by explaining it to somebody else. This can be done verbally or through writing. When I learn something new I find it very helpful to write it down. Throughout my academic career I tried very hard to write good notes, and I hope that this website will allow me to share them with you.
+					<p> &nbsp A great way to test if you understand something is by explaining it to somebody else. This can be done verbally or through writing. When I learn something new I find it very helpful to write it down. Throughout my academic career I tried very hard to write good notes, and I hope that this website will allow me to share them with you. 
 					</p>
-					<div id="threeDots2"> <a onclick="toggleOnOff(2)">...</a> </div>
+					
+					<div id="more-less2"> <a onclick="toggleOnOff(2)">See More</a> </div>
 					<div hidden id="restOfParagraphs2">
 					<p> &nbsp People think that programmers do not have to write a lot which is half true. When you write code, it's very important to have good comments so that other people reading your code can understand it. It may sound trivial but it’s not. When I had group projects in school most of the time no one commented on their code, and if someone did comment on their code, you had needed a cryptanalyst to decipher their comments. Programmers also have to write good documentation on the different libraries or languages they create.  
 					</p>
 					<p> &nbsp As annoying as writing is, it's important to be able to express yourself in a clear and concise manner. Like all skills it requires hard work, but it's worth it at the end. 
 					</p>
-					<div id="threeDots2"> <a onclick="toggleOnOff(2)">...</a> </div>
+					<p> &nbsp A question people may be asking is why not start a podcast or youtube channel ? The answer I would give is that I am not a fan of recording myself. Plus, there are many youtubers out there, this forum gives me a chance to be a little more unique. 
+					</p>
+					<div id="more-less2"> <a onclick="toggleOnOff(2)">See Less</a> </div>
 					</div>
 				</div>				
 			</article>
@@ -52,18 +55,18 @@
 					<small> Starting Something New </small> 
 					<p> &nbsp It’s very common for computer science students to work on side projects. Many students create their own website’s, build interactive games, or code small useful programs to help them with everyday tasks. I spent most of my time and energy focusing on school. 
 					</p>
-					<p> &nbsp In university there is a big focus on theory. As a result you can feel inadequate. You can feel like you do not have the necessary skills to succeed. Like math, programming is not a spectator sport. You have to actually practice. You have to code on your own.
+					<p> &nbsp In university there is a big focus on theory. As a result you can feel kind of lost once you graduate. I know I do. Trying to land that first job has proven to be harder then I anticipated. The best thing anyone can do at this point is to continue to learn and to improve as a programmer. Like math, programming is not a spectator sport. You have to actually practice. You have to code on your own. If you want to be great at something you have to work hard at it. Like Lebron James says, “Hard work beats talent when talent doesn't work hard.” 
 					</p>		
-					<div id="threeDots1"> <a onclick="toggleOnOff(1)">...</a> </div>
+					<div id="more-less1"> <a onclick="toggleOnOff(1)">See More</a> </div>
 					<div hidden id="restOfParagraphs1">
 						<p> &nbsp During the summer of the pandemic as I was reviewing some of my notes the idea of this website came to me. It is sort of a combination of many ideas that I had put into one. I always wanted to build my own website, publish my notes from school, and create something useful and meaningful.
 						</p>
 						<p> &nbsp I noticed there are a lot of content creators out there, and most of us spend so much time consuming their content. I wanted to create content not for the sake of content rather content that is useful and insightful. I want to share my experience as an up and coming programmer. I hope that by documenting my life as an average programmer I will inspire some other programmers who are experiencing similar obstacles and help them overcome them.    
 						</p>
 						<p> &nbsp
-						The problem with starting anything new is figuring out where to start. I am someone who likes to learn things from the ground up. This leads to starting things from the beginning when I really should start from the middle. I first thought of creating this website using react but to properly learn react in my opinion you need to properly learn javascript, so I decided to build the site using HTML, CSS, and some Javascript. I hope to fully learn javascript from the ground up and then build the site in react. This allows me to build something that people can see right away. Like Alan Cohen once said “Do not wait until the conditions are perfect to begin. Beginning makes the conditions perfect”. 						
+						The problem with starting anything new is figuring out where to start. I am someone who likes to learn things from the ground up. This leads to starting things from the beginning. I first thought of creating this website using react, but to properly learn react in my opinion you need to properly learn JavaScript, so I decided to build the site using HTML, CSS, and some JavaScript. I hope to fully learn JavaScript from the ground up and then build the site in react. This allows me to build something that people can see right away. Like Alan Cohen once said “Do not wait until the conditions are perfect to begin. Beginning makes the conditions perfect”. 						
 						</p>
-						<div id="threeDots1"> <a onclick="toggleOnOff(1)">...</a>
+						<div id="more-less1"> <a onclick="toggleOnOff(1)">See Less</a>
 						</div>
 					</div>
 				</div>
