--- a/overloadingvsoverriding.html
+++ b/overloadingvsoverriding.html
@@ -29,7 +29,7 @@
 			
 			
 			<p> &nbsp When you use inheritance, the extended class inherits all of the attributes and methods from the base class. 
-			Some of these methods may be useless to the extended class. The extended class can fix this probelm by either
+			Some of these methods may be useless to the extended class. The extended class can fix this problem by either
 			overloading the useless method or overriding them. </p>
 
 			
