--- a/protected.html
+++ b/protected.html
@@ -35,7 +35,7 @@
 			</p>
 			
 			<div class="photo">
-				<img src="../../package image.png" alt="Diagram">
+				<img src="package image.png" alt="Diagram">
 			</div>
 			<p> &nbsp Class C can access v3 not because class C is a child of class A. Rather class C is in the same package as class A and therefore has package access.
 			</p>
