--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 					<p id="mark"> ? </p>
 					<p> identity unknown atm </p>
 				</div>
-				<p> &nbsp I graduated from Concordia University in 2020 with a Bachelor Of Computer Science and Computer Applications with a Minor In Mathematics & Statistics.
+				<p> &nbsp I graduated from university in 2020 with a Bachelor Of Computer Science and Computer Applications with a Minor In Mathematics & Statistics.
 				</p> 
 				<p> &nbsp The thing I enjoy most about programming and mathematics is solving problems with a limited set of rules. 
 				There is no greater feeling than solving a difficult problem. A lot of people do not realize how much of 
@@ -41,7 +41,7 @@
 				You need to start somewhere. I hope to code the site in javascript and then in react. 
 				</p>
 				<p> &nbsp I would like to take this opportunity to thank everyone who has helped me achieve my goal of graduating university. 
-				This includes my parents, my professors, the people who work at caps concordia, my fellow students and anyone else who has aided me in my journey. 
+				This includes my parents, my professors, the people who work at the student success center, my fellow students and anyone else who has aided me in my journey. 
 				I am not the easiest student to deal with, so the help I received is very much appreciated.  
 				</p> 
 			</div>​
