--- a/about.html
+++ b/about.html
@@ -38,11 +38,11 @@
 				Two, the notes page which will have all of my programming notes which can be used hopefully as a resource. 
 				The theme of the “the average programmer” is that of someone typing their notes on a typewriter. 
 				I wanted the site to be simple and easy to navigate. Sometimes simplicity is the best design. I first started coding the site in HTML and CSS. 
-				You need to start somewhere. I hope to code the site in javascript and then in react. 
+				You need to start somewhere. I hope to code the site in JavaScript and then in React. 
 				</p>
 				<p> &nbsp I would like to take this opportunity to thank everyone who has helped me achieve my goal of graduating university. 
 				This includes my parents, my professors, the people who work at the student success center, my fellow students and anyone else who has aided me in my journey. 
-				I am not the easiest student to deal with, so the help I received is very much appreciated.  
+				I am not the easiest student to deal with, so any help I received is very much appreciated.  
 				</p> 
 			</div>​
 	    </article>
