--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 				</p>
 				<p> &nbsp I would like to take this opportunity to thank everyone who has helped me achieve my goal of graduating university. 
 				This includes my parents, my professors, the people who work at the student success center, my fellow students and anyone else who has aided me in my journey. 
-				I am not the easiest student to deal with, so any help I received is very much appreciated.  
+				I am not the easiest student to deal with, so any help that I received was very much appreciated.  
 				</p> 
 			</div>​
 	    </article>
