--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<div hidden id="restOfParagraphs3">
 					<p> &nbsp The question I keep asking myself is do I continue working on THE AVERAGE PROGRAMMER or do I abandon ship and work on some side projects. I don’t have a good answer, but I decided that I really want to see my vision of THE AVERAGE PROGRAMMER come to fruition. In the short term this might not be the best decision, but I truly believe in the long term it will be the more beneficial one. 
 					</p>
-					<p> &nbsp Giving up and doing nothing is definitely worse. Like the american author Gena Showalter says  “Giving up is the only sure way to fail.”  You can’t let the disappointment of the recruitment and hiring process drag you down. Something will come up. The question is will you be ready ? and that's what I am trying to do. Trying to prepare myself so that when that interview comes I will be ready.  
+					<p> &nbsp Giving up and doing nothing is definitely worse. Like the American author Gena Showalter says  “Giving up is the only sure way to fail.”  You can’t let the disappointment of the recruitment and hiring process drag you down. Something will come up. The question is will you be ready ? and that's what I am trying to do. Trying to prepare myself so that when that interview comes I will be ready.  
 					</p>
 					<div id="more-less3"> <a onclick="toggleOnOff(3)">See Less</a> </div>
 					</div>
