--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 				</p>
 				<p> &nbsp  The website is split into two parts: One, the home page which acts as my programming journal. 
 				Two, the notes page which will have all of my programming notes which can be used hopefully as a resource. 
-				The theme of the “the average programmer” is that of someone typing their notes on a typewriter. 
+				The theme of the “THE AVERAGE PROGRAMMER” is that of someone typing their notes on a typewriter. 
 				I wanted the site to be simple and easy to navigate. Sometimes simplicity is the best design. I first started coding the site in HTML and CSS. 
 				You need to start somewhere. I hope to code the site in JavaScript and then in React. 
 				</p>
